cursive-bootstrap/tests/ui/E-TYP/E-TYP-2508.cursive
// RUN: compile-fail
// DIAG: E-TYP-2508
// SPEC: 13.2
// DESC: Cyclic superclass dependency

class A <: B { }  //~ ERROR E-TYP-2508: cyclic superclass
class B <: A { }

public procedure main(move ctx: Context) -> i32 {
    return 0
}

